# Kitchen_Main_Site

./: index.html  pyproject.toml
premium_remont/catalog/: urls.py  views.py
premium_remont/catalog/static/catalog/: document_1.docx
premium_remont/catalog/static/catalog/css/: 10th_page_style.css  11th_page_style.css  4th_page_style.css  5th_page_style.css  6th_page_style.css  7th_page_style.css  8th_page_style.css  9th_page_style.css  first_page_style.css  form_style.css  photo_page_style.css  portfolio_style.css  second_page_style.css  styles.min.css  therd_page_style.css
premium_remont/catalog/templates/catalog/: 10th_page.html  11th_page.html  12th_page.html  4th_page.html  5th_page.html  6th_page.html  7th_page.html  8th_page.html  9th_page.html  Therd_page.html  first_page.html  form.html  main_page.html  second_page.html
premium_remont/premium_remont/static/css/: base_style.css
premium_remont/premium_remont/templates/html/: base.html
