[project]
name = "premium-remont-master"
version = "0.1.0"
description = ""
authors = [
    {name = "basir",email = "m-basir@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
